[package]
name = "vjoy-feeder"
version = "1.0.0"
authors = ["SionoiS <SionoiS@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty-vjoy = { path = "../rusty-vjoy"}
hidapi = "1.4"
ctrlc = "3.2"